--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <input type="text" id="se2" name="se2" size="25">
       </li>
       <li>
-        <label for="se3">時間</label><br>
+        <label for="se3">受講時間</label><br>
         <input type="time" id="se3" name="se3" size="25">
       </li>
     </ul>
