--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
   <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
-  <script src="name.js"></script>
-  <script src="q-liff.js"></script>
+  <script src="reply.js"></script>
+  <script src="w-liff.js"></script>
 </body>
 </html>
