--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
             <input type="text" id="cneme1" name="cname1" size="25">
           </li>
           <li>
-            <input type="checkbox" id="cneme1-ch1" name="cname1-ch1">
-            <label for="cname1-ch1">高齢者対応　該当者</label>
+            <label for="cname1old">高齢者対応</label>
+            <select id="cneme1old" name="cname1old">
+              <option value="on">該当</option>
+              <option value="off">非該当</option>
+            </select>
           </li>
           <li>
-            <input type="checkbox" id="cneme1-ch2" name="cname1-ch2">
-            <label for="cname1-ch2">意向把握シート　記入対象</label>
+            <label for="cname1think">意向把握シート</label>
+            <select id="cneme1think" name="cname1think">
+              <option value="on">対象</option>
+              <option value="off">非対象</option>
+            </select>
           </li>
           <li>
             <label for="cname1-text">目的・面談内容及び情報収集</label><br>
