--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
           <li>
             <label for="cname1old">高齢者対応</label>
             <select id="cneme1old" name="cname1old">
-              <option value="on">該当</option>
-              <option value="off">非該当</option>
+              <option value="該当">該当</option>
+              <option value="非該当">非該当</option>
             </select>
           </li>
           <li>
             <label for="cname1think">意向把握シート</label>
             <select id="cneme1think" name="cname1think">
-              <option value="on">対象</option>
-              <option value="off">非対象</option>
+              <option value="対象">対象</option>
+              <option value="非対象">非対象</option>
             </select>
           </li>
           <li>
