--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           </li>
           <li>
             <label for="cname1old">高齢者対応</label>
-            <select id="cneme1old" name="cname1old">
+            <select id="cname1old" name="cname1old">
               <option value="該当">該当</option>
               <option value="非該当">非該当</option>
             </select>
           </li>
           <li>
             <label for="cname1think">意向把握シート</label>
-            <select id="cneme1think" name="cname1think">
+            <select id="cname1think" name="cname1think">
               <option value="対象">対象</option>
               <option value="非対象">非対象</option>
             </select>
