--- a/index.html
+++ b/index.html
@@ -33,148 +33,91 @@
     <p class="mt-3">
       本日の訪問先
     </p>
-    <ol>
-      <li> 
-        <ul>
-          <li>
-            <label for="cname1">お客様名</label><br>
-            <input type="text" id="cname1" name="cname1" size="25">
-          </li>
-          <li>
-            <label for="cname1old">高齢者対応</label>
-            <select id="cname1old" name="cname1old">
-              <option value="">未選択</option>
-              <option value="該当">該当</option>
-              <option value="非該当">非該当</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname1think">意向把握シート</label>
-            <select id="cname1think" name="cname1think">
-              <option value="">未選択</option>
-              <option value="対象">対象</option>
-              <option value="非対象">非対象</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname1-text">目的・面談内容及び情報収集</label><br>
-            <textarea type="text" id="cneme1-text" name="cname1-text" rows="10" cols="25"></textarea>
-          </li>
-        </ul>
-      </li>
-      <li> 
-        <ul>
-          <li>
-            <label for="cname2">お客様名</label><br>
-            <input type="text" id="cname2" name="cname2" size="25">
-          </li>
-          <li>
-            <label for="cname2old">高齢者対応</label>
-            <select id="cname2old" name="cname2old">
-              <option value="">未選択</option>
-              <option value="該当">該当</option>
-              <option value="非該当">非該当</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname2think">意向把握シート</label>
-            <select id="cname2think" name="cname2think">
-              <option value="">未選択</option>
-              <option value="対象">対象</option>
-              <option value="非対象">非対象</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname2-text">目的・面談内容及び情報収集</label><br>
-            <textarea type="text" id="cname2-text" name="cname2-text" rows="10" cols="25"></textarea>
-          </li>
-        </ul>
-      </li>
-      <li> 
-        <ul>
-          <li>
-            <label for="cname3">お客様名</label><br>
-            <input type="text" id="cname3" name="cname3" size="25">
-          </li>
-          <li>
-            <label for="cname3old">高齢者対応</label>
-            <select id="cname3old" name="cname3old">
-              <option value="">未選択</option>
-              <option value="該当">該当</option>
-              <option value="非該当">非該当</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname3think">意向把握シート</label>
-            <select id="cname3think" name="cname3think">
-              <option value="">未選択</option>
-              <option value="対象">対象</option>
-              <option value="非対象">非対象</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname3-text">目的・面談内容及び情報収集</label><br>
-            <textarea type="text" id="cname3-text" name="cname3-text" rows="10" cols="25"></textarea>
-          </li>
-        </ul>
-      </li>
-      <li> 
-        <ul>
-          <li>
-            <label for="cname4">お客様名</label><br>
-            <input type="text" id="cname4" name="cname4" size="25">
-          </li>
-          <li>
-            <label for="cname4old">高齢者対応</label>
-            <select id="cname4old" name="cname4old">
-              <option value="">未選択</option>
-              <option value="該当">該当</option>
-              <option value="非該当">非該当</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname4think">意向把握シート</label>
-            <select id="cname4think" name="cname4think">
-              <option value="">未選択</option>
-              <option value="対象">対象</option>
-              <option value="非対象">非対象</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname4-text">目的・面談内容及び情報収集</label><br>
-            <textarea type="text" id="cname4-text" name="cname4-text" rows="10" cols="25"></textarea>
-          </li>
-        </ul>
-      </li>
-      <li> 
-        <ul>
-          <li>
-            <label for="cname5">お客様名</label><br>
-            <input type="text" id="cname5" name="cname5" size="25">
-          </li>
-          <li>
-            <label for="cname5old">高齢者対応</label>
-            <select id="cname5old" name="cname5old">
-              <option value="">未選択</option>
-              <option value="該当">該当</option>
-              <option value="非該当">非該当</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname5think">意向把握シート</label>
-            <select id="cname5think" name="cname5think">
-              <option value="">未選択</option>
-              <option value="対象">対象</option>
-              <option value="非対象">非対象</option>
-            </select>
-          </li>
-          <li>
-            <label for="cname5-text">目的・面談内容及び情報収集</label><br>
-            <textarea type="text" id="cname5-text" name="cname5-text" rows="10" cols="25"></textarea>
-          </li>
-        </ul>
-      </li>
-    </ol>
+    <p class="mt-3">1</p>
+    <label for="cname1">お客様名</label><br>
+    <input type="text" id="cname1" name="cname1" size="25"><br>
+    <label for="cname1old">高齢者対応</label>
+    <select id="cname1old" name="cname1old">
+      <option value="">未選択</option>
+      <option value="該当">該当</option>
+      <option value="非該当">非該当</option>
+    </select><br>
+    <label for="cname1think">意向把握シート</label>
+    <select id="cname1think" name="cname1think">
+      <option value="">未選択</option>
+      <option value="対象">対象</option>
+      <option value="非対象">非対象</option>
+    </select><br>
+    <label for="cname1-text">目的・面談内容及び情報収集</label><br>
+    <textarea type="text" id="cneme1-text" name="cname1-text" rows="10" cols="30"></textarea>
+    <p class="mt-3">2</p>
+    <label for="cname2">お客様名</label><br>
+    <input type="text" id="cname2" name="cname2" size="25"><br>
+    <label for="cname2old">高齢者対応</label>
+    <select id="cname2old" name="cname2old">
+      <option value="">未選択</option>
+      <option value="該当">該当</option>
+      <option value="非該当">非該当</option>
+    </select><br>
+    <label for="cname2think">意向把握シート</label>
+    <select id="cname2think" name="cname2think">
+      <option value="">未選択</option>
+      <option value="対象">対象</option>
+      <option value="非対象">非対象</option>
+    </select><br>
+    <label for="cname2-text">目的・面談内容及び情報収集</label><br>
+    <textarea type="text" id="cname2-text" name="cname2-text" rows="10" cols="30"></textarea>
+    <p class="mt-3">3</p>
+    <label for="cname3">お客様名</label><br>
+    <input type="text" id="cname3" name="cname3" size="25"><br>
+    <label for="cname3old">高齢者対応</label>
+    <select id="cname3old" name="cname3old">
+      <option value="">未選択</option>
+      <option value="該当">該当</option>
+      <option value="非該当">非該当</option>
+    </select><br>
+    <label for="cname3think">意向把握シート</label>
+    <select id="cname3think" name="cname3think">
+      <option value="">未選択</option>
+      <option value="対象">対象</option>
+      <option value="非対象">非対象</option>
+    </select><br>
+    <label for="cname3-text">目的・面談内容及び情報収集</label><br>
+    <textarea type="text" id="cname3-text" name="cname3-text" rows="10" cols="30"></textarea>
+    <p class="mt-3">4</p>
+    <label for="cname4">お客様名</label><br>
+    <input type="text" id="cname4" name="cname4" size="25"><br>
+    <label for="cname4old">高齢者対応</label>
+    <select id="cname4old" name="cname4old">
+      <option value="">未選択</option>
+      <option value="該当">該当</option>
+      <option value="非該当">非該当</option>
+    </select><br>
+    <label for="cname4think">意向把握シート</label>
+    <select id="cname4think" name="cname4think">
+      <option value="">未選択</option>
+      <option value="対象">対象</option>
+      <option value="非対象">非対象</option>
+    </select><br>
+    <label for="cname4-text">目的・面談内容及び情報収集</label><br>
+    <textarea type="text" id="cname4-text" name="cname4-text" rows="10" cols="30"></textarea>
+    <p class="mt-3">5</p>
+    <label for="cname5">お客様名</label><br>
+    <input type="text" id="cname5" name="cname5" size="25"><br>
+    <label for="cname5old">高齢者対応</label>
+    <select id="cname5old" name="cname5old">
+      <option value="">未選択</option>
+      <option value="該当">該当</option>
+      <option value="非該当">非該当</option>
+    </select><br>
+    <label for="cname5think">意向把握シート</label>
+    <select id="cname5think" name="cname5think">
+      <option value="">未選択</option>
+      <option value="対象">対象</option>
+      <option value="非対象">非対象</option>
+    </select><br>
+    <label for="cname5-text">目的・面談内容及び情報収集</label><br>
+    <textarea type="text" id="cname5-text" name="cname5-text" rows="10" cols="30"></textarea>
 
     <p class="mt-3">
       本日、お客様から苦情は受け付けましたか？
@@ -188,22 +131,22 @@
     </p>
       <ul>
         <li>
-          <label for="pc-ch">パソコン</label>
+          <label for="pcch">パソコン</label>
           <select name="pcch" id="pcch">
-            <option value="持ち出し">持ち出し</option>
-            <option value="返却">返却</option>
+            <option value="持ち帰る">持ち帰る</option>
+            <option value="持ち帰らない">持ち帰らない</option>
           </select>
         </li>
         <li>
-          <label for="tb-ch">タブレット</label>
+          <label for="tbch">タブレット</label>
           <select name="tbch" id="tbch">
-            <option value="持ち出し">持ち出し</option>
-            <option value="返却">返却</option>
+            <option value="持ち帰る">持ち帰る</option>
+            <option value="持ち帰らない">持ち帰らない</option>
           </select>
         </li>
         <li>
           <label for="ather">その他</label><br>
-          <textarea type="text" id="ather" name="ather" rows="3" cols="25"></textarea>
+          <textarea id="ather" name="ather" rows="3" cols="25" placeholder="見積書•リスト•請求書•カバーノートなど"></textarea>
         </li>
       </ul>
         
@@ -223,7 +166,8 @@
       </li>
       <li>
         <label for="se3">受講時間</label><br>
-        <input type="time" id="se3" name="se3" size="25">
+        <input type="time" id="se3" name="se3" size="25">〜
+        <input type="time" id="se4" name="se3" size="25">
       </li>
     </ul>
 
